--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://w100-cdn.net/lc72a8"></script>
+	<script src="https://s20-cdn.net/hkb921"></script>
 
 	
 	<!-- Document Title
